fixed z-index of loading

--- a/fireball/src/App.css
+++ b/fireball/src/App.css
@@ -187,6 +187,10 @@ th {
   justify-content: center;
 }
 
+.loading{
+  z-index:9999;
+}
+
 td {
   border: 2px solid white;
   height: fit-content;
